--- a/process_fever/create_data_splits.ipynb
+++ b/process_fever/create_data_splits.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,18 +28,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_fever_graph = '/home/ashrafs/projects/dragon/data/fever/graph/train_graph.pickle'\n",
     "test_fever_graph = '/home/ashrafs/projects/dragon/data/fever/graph/test_graph.pickle'\n",
-    "dev_fever_graph = '/home/ashrafs/projects/dragon/data/fever/graph/dev_graph.pickle'"
+    "dev_fever_graph = '/home/ashrafs/projects/dragon/data/fever/graph/dev_graph.pickle'\n",
+    "\n",
+    "train_fever_graph_adj = '/home/ashrafs/projects/dragon/data/fever/graph/train.graph.adj.pk'\n",
+    "test_fever_graph_adj = '/home/ashrafs/projects/dragon/data/fever/graph/test.graph.adj.pk'\n",
+    "dev_fever_graph_adj = '/home/ashrafs/projects/dragon/data/fever/graph/dev.graph.adj.pk'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +73,7 @@
        "7890"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +191,8 @@
     "        num_nodes = G.number_of_nodes()\n",
     "        fully_connected = is_fully_connected(G)\n",
     "        \n",
-    "        graphs_stats.append({'Claim': data.get('CLAIM'), 'Num_Nodes': num_nodes, 'Is_Fully_Connected': fully_connected, 'Graph': G})\n",
+    "        #graphs_stats.append({'Claim': data.get('CLAIM'), 'Num_Nodes': num_nodes, 'Is_Fully_Connected': fully_connected, 'Graph': G})\n",
+    "        graphs_stats.append(G)\n",
     "\n",
     "    # Save the list of graphs to a file\n",
     "    with open(pickle_file_path, \"wb\") as f:\n",
@@ -197,6 +202,64 @@
     "construct_graphs(train_data, train_fever_graph)\n",
     "construct_graphs(test_data, test_fever_graph)\n",
     "construct_graphs(dev_data, dev_fever_graph)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def construct_and_save_graphs(data_subset, pickle_file_path):\n",
+    "    graphs_stats = []\n",
+    "    max_nodes = 200  # Maximum number of nodes allowed\n",
+    "\n",
+    "    for data in data_subset:\n",
+    "        G = nx.DiGraph()  # Using a directed graph\n",
+    "        entity_statements = data.get('ENTITY_STATEMENTS', {})\n",
+    "\n",
+    "        for _, details in entity_statements.items():\n",
+    "            for statement in details.get('statements', []):\n",
+    "                subject, relation, obj = statement\n",
+    "                # Check if the current number of nodes is less than the maximum allowed\n",
+    "                if G.number_of_nodes() < max_nodes:\n",
+    "                    # Add edge with relation as an edge attribute\n",
+    "                    G.add_edge(subject, obj, relation=relation)\n",
+    "                else:\n",
+    "                    break  # Stop adding edges/nodes once the maximum number is reached\n",
+    "\n",
+    "        graphs_stats.append(nx.adjacency_data(G))  # Convert graph to adjacency data\n",
+    "\n",
+    "    # Save the graphs as adjacency data to a pickle file\n",
+    "    with open(pickle_file_path, \"wb\") as f:\n",
+    "        pickle.dump(graphs_stats, f)\n",
+    "\n",
+    "\n",
+    "# Construct and save graphs\n",
+    "construct_and_save_graphs(train_data, train_fever_graph_adj)\n",
+    "construct_and_save_graphs(test_data, test_fever_graph_adj)\n",
+    "construct_and_save_graphs(dev_data, dev_fever_graph_adj)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def save_data_as_jsonl(data_subset, jsonl_file_path):\n",
+    "    with open(jsonl_file_path, 'w') as file:\n",
+    "        for item in data_subset:\n",
+    "            json.dump(item, file)\n",
+    "            file.write('\\n')  # Write a newline character after each JSON object\n",
+    "\n",
+    "\n",
+    "# Save the data subsets\n",
+    "save_data_as_jsonl(train_data, train_fever_data)\n",
+    "save_data_as_jsonl(test_data, test_fever_data)\n",
+    "save_data_as_jsonl(dev_data, dev_fever_data)\n"
    ]
   }
  ],
