Fever devset training

--- a/process_fever/convert-fever-format.ipynb
+++ b/process_fever/convert-fever-format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,17 @@
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
     "import pickle\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_dev_data  = '/home/ashrafs/projects/dragon/data/fever1/old-format/enriched_feverous_dev.jsonl'"
    ]
   },
   {
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,12 +199,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_data_as_jsonl(data_subset, jsonl_file_path):\n",
-    "    with open(jsonl_file_path, 'w') as file:\n",
+    "    with open(jsonl_file_path, 'w', encoding='utf-8') as file:\n",
     "        for item in data_subset:\n",
     "            json.dump(item, file)\n",
     "            file.write('\\n')  # Write a newline character after each JSON object\n",
@@ -212,6 +222,89 @@
     "save_data_as_jsonl(converted_dev, dev_fever_output)\n",
     "save_data_as_jsonl(converted_train, train_fever_output)\n",
     "save_data_as_jsonl(converted_test, test_fever_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No of Claims:  7890\n",
+      "{'id': 7389, 'question': {'stem': 'Algebraic logic has five Logical system and Lindenbaum–Tarski algebra which includes Physics algebra and Nodal algebra (provide models of propositional modal logics)., which:', 'choices': [{'text': 'SUPPORTS', 'label': 'A'}, {'text': 'REFUTES', 'label': 'B'}, {'text': 'NOT ENOUGH INFO', 'label': 'C'}]}, 'answerKey': 'B'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#converting full dev set into format of MCQ:\n",
+    "# Load the data\n",
+    "\n",
+    "dev_data = load_data(full_dev_data)\n",
+    "\n",
+    "# Now, data_list contains all the data from the JSONL file\n",
+    "# Count the claims\n",
+    "number_of_claims = len(dev_data)\n",
+    "print(\"No of Claims: \", number_of_claims)\n",
+    "converted_dev= convert_to_fever_format(dev_data)\n",
+    "print(converted_dev[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7890"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(converted_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data split into train: 6312 (approx. 80.00%), dev: 789 (approx. 10.00%), test: 789 (approx. 10.00%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def split_and_save_data(data_list):\n",
+    "    \n",
+    "    train_data, temp_data = train_test_split(data_list, test_size=0.2, random_state=42)\n",
+    "    dev_data, test_data = train_test_split(temp_data, test_size=0.5, random_state=42)\n",
+    "\n",
+    "    # Save each subset to its corresponding jsonl file\n",
+    "    save_data_as_jsonl(train_data, train_fever_output)\n",
+    "    save_data_as_jsonl(dev_data, dev_fever_output)\n",
+    "    save_data_as_jsonl(test_data, test_fever_output)\n",
+    "\n",
+    "    return len(train_data), len(dev_data), len(test_data)\n",
+    "\n",
+    "\n",
+    "total_data_count = len(converted_dev)  \n",
+    "train_count, dev_count, test_count = split_and_save_data(converted_dev)\n",
+    "\n",
+    "print(f\"Data split into train: {train_count} (approx. {train_count/total_data_count*100:.2f}%), \"\n",
+    "      f\"dev: {dev_count} (approx. {dev_count/total_data_count*100:.2f}%), \"\n",
+    "      f\"test: {test_count} (approx. {test_count/total_data_count*100:.2f}%)\")"
    ]
   }
  ],
