--- a/utils_biomed/preprocess_medqa.ipynb
+++ b/utils_biomed/preprocess_medqa.ipynb
@@ -80,7 +80,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.18 ('dragon2': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -94,7 +94,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.18"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "08587c0f5c67a3495a6970ba7d5b464d0115ad99415726a58f65952f34bfe0bf"
+   }
   }
  },
  "nbformat": 4,
