--- a/process_fever/convert-fever-format.ipynb
+++ b/process_fever/convert-fever-format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,13 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -36,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,43 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Abraham Annan Adjei has never played professional football.\n",
-      "LABEL:  REFUTES  ID:  21641\n",
-      "----------\n",
-      "Rex Jory remained a copy boy until his retirement.\n",
-      "LABEL:  REFUTES  ID:  6293\n",
-      "----------\n",
-      "Italian film actor Peppe Lanzetta has appeared in films since his first, Blues metropolitano, in 1985 to his most recent, Due soldati, in 2017.\n",
-      "LABEL:  SUPPORTS  ID:  9220\n",
-      "----------\n",
-      "Two ships were named after U.S. Navy enlistee, Charles Ausburne, after he stood to duty when the Antilles,a ship that was chartered by the Army for troop transport, was torpedoed amd sunk by a German U-Boat, under him.\n",
-      "LABEL:  SUPPORTS  ID:  2021\n",
-      "----------\n",
-      "UA Valettoise was founded in 1948, is in the CFA 2 Group E league, and is based in the Provence-Alpes-Côte d'Azur region in southeastern France.\n",
-      "LABEL:  SUPPORTS  ID:  2117\n",
-      "----------\n",
-      "Juventus, colloquially known as Juve (pronounced [ˈjuːve), is a professional football club based in Turin, Piedmont, Italy, that competes in the Serie A, the top flight of Italian football, won the most numbers of gold in the Coppa Italia finals.\n",
-      "LABEL:  NOT ENOUGH INFO  ID:  7831\n",
-      "----------\n",
-      "The kingdom of Plantae are multicellular eukaryotic organisms that form the biological kingdom for which Apistogramma regani is a member of one of its over 1.5 million species.\n",
-      "LABEL:  REFUTES  ID:  3675\n",
-      "----------\n",
-      "Jason Naismith played for ten clubs but never signed with Peterborough United, also known as \"The Posh\".\n",
-      "LABEL:  REFUTES  ID:  43418\n",
-      "----------\n",
-      "The Petronas Philharmonic Hall, which was constructed with exposed movable ceiling panels, has seven movable panels in the upper ceiling which can be adjusted to alter the volume in the hall and simulate a wide range of acoustic environments.\n",
-      "LABEL:  REFUTES  ID:  10588\n",
-      "----------\n",
-      "Cape Fear and Yadkin Valley Railway operated in North and South Carolina right after Reconstruction, created in 1879 from a consolidation with two other railroads.\n",
-      "LABEL:  SUPPORTS  ID:  493\n",
-      "----------\n"
+     "ename": "NameError",
+     "evalue": "name 'dev_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfor\u001b[39;00m i, data \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(dev_data):\n\u001b[1;32m      2\u001b[0m     \u001b[39mif\u001b[39;00m i \u001b[39m>\u001b[39m \u001b[39m5\u001b[39m:\n\u001b[1;32m      3\u001b[0m         \u001b[39mbreak\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dev_data' is not defined"
      ]
     }
    ],
