--- a/process_fever/process_statements.ipynb
+++ b/process_fever/process_statements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,18 +15,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "old_fever_dev = '/home/ashrafs/projects/dataset/fever/feverous_dev_challenges.jsonl'\n",
-    "new_fever_dev = '/home/ashrafs/projects/dataset/FEVER-Processed/feverous_dev_challenges_statements.jsonl'\n",
-    "updated_fev_dev = '/home/ashrafs/projects/dragon/data/fever/feverous_dev_labelled_statements.jsonl'"
+    "processed_fever_dev = '/home/ashrafs/projects/dataset/FEVER-Processed/feverous_dev_challenges_statements.jsonl'\n",
+    "updated_fev_dev = '/home/ashrafs/projects/dragon/data/fever/full/feverous_dev_labelled_statements.jsonl'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_fever_train = '/home/ashrafs/projects/dataset/fever/feverous_train_challenges.jsonl'\n",
+    "processed_fever_train = '/home/ashrafs/projects/dataset/FEVER-Processed/feverous_train_challenges_statements.jsonl'\n",
+    "updated_fev_train = '/home/ashrafs/projects/dragon/data/fever/full/feverous_train_labelled_statements.jsonl'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +50,7 @@
        " (3044, 'NOT ENOUGH INFO')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,19 +111,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data enrichment completed and saved to /home/ashrafs/projects/dragon/data/fever/feverous_dev_labelled_statements.jsonl\n"
+      "Data enrichment completed and saved to /home/ashrafs/projects/dragon/data/fever/full/feverous_dev_labelled_statements.jsonl\n"
      ]
     }
    ],
    "source": [
-    "map_claim_ids_and_labels(old_fever_dev, new_fever_dev,updated_fev_dev )"
+    "map_claim_ids_and_labels(old_fever_dev, processed_fever_dev,updated_fev_dev )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data enrichment completed and saved to /home/ashrafs/projects/dragon/data/fever/full/feverous_train_labelled_statements.jsonl\n"
+     ]
+    }
+   ],
+   "source": [
+    "map_claim_ids_and_labels(old_fever_train, processed_fever_train,updated_fev_train)"
    ]
   }
  ],
